Fixed section3 styling. Text used to be cropped on smaller screens.

--- a/src/overlay-low/LowOverlay.module.css
+++ b/src/overlay-low/LowOverlay.module.css
@@ -82,7 +82,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 50px;
 
-    width: 30%;
+    width: min-content;
 
     overflow: hidden;
 }
